# ohmygreen

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.js  docker-compose.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  styles.css
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202611010001_init_schema.py
app/: database.py  main.py  models.py  schemas.py  security.py
app/api/: deps.py  errors.py
app/api/routes/: __init__.py  api.py  web.py
app/core/: __init__.py  auth.py  settings.py
app/domain/: __init__.py  exceptions.py
app/infra/repositories/: __init__.py  post_repo.py  user_repo.py
app/services/: __init__.py  auth_service.py  post_service.py
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/domain/: models.py
backend/app/services/: post_service.py
blog/: __init__.py  builder.py  config.py  markdown_engine.py  models.py  utils.py
cli/: __init__.py  blog_agent.py  blog_cli.py
cli/commands/: main.py
cli/core/: generation.py
cli/ohmygreen_cli/: __init__.py  main.py
cli/providers/: base.py  config.py  openai_client.py  qwen_client.py  service.py
cli/transport/: http_client.py
cli/ui/: workflow.py
configs/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
data/berserk/: chapters.json
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts  styles.css
frontend/static/: style.css
frontend/templates/: 404.html  base.html  blog-index.html  index.html  post.html  rss.xml  sitemap.xml
posts/: my-first-post.md
scripts/: dev.sh
static/: style.css
templates/: index.html  login.html
tests/: test_backend_api.py  test_generation.py  test_http_client.py
