[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohmygreen"
version = "0.1.0"
description = "AI + BearBlog + CLI private blogging demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "jinja2==3.1.4",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "pydantic==2.9.2",
  "python-multipart==0.0.9",
  "typer==0.12.5",
  "rich==14.3.3",
  "requests==2.32.3",
  "itsdangerous==2.2.0",
  "click==8.1.7",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.9",
  "mypy==1.11.2",
]

[project.scripts]
ohmygreen = "cli.blog_agent:app"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true
