[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohmygreen"
version = "0.1.0"
description = "Simple writing workspace with a web app, API, and CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer==0.12.5",
  "rich==14.3.3",
  "markdown==3.7",
  "jinja2==3.1.4",
  "pyyaml==6.0.2",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.9",
]

[project.scripts]
blog = "cli.blog_cli:app"
ohmygreen = "cli.commands.main:app"
ohmygreen-helper = "cli.ohmygreen_cli.main:app"

[tool.setuptools.packages.find]
include = ["blog*", "cli*"]

[tool.ruff]
line-length = 100
